--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,18 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
     <meta charset="utf-8" />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
       href="<%= webpackConfig.output.publicPath %>favicon.png"
+      
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>Vue Paper Dashboard</title>
+    <title>AyudAgro</title>
     <!-- Bootstrap core CSS     -->
     <meta
       name="viewport"
@@ -37,6 +39,7 @@
     <link
       type="text/css"
       href="https://fonts.googleapis.com/css?family=Muli:400,300"
+
       rel="stylesheet"
     />
     <link
